tried to font to look better on small displays made some changes to icon size and fixed footer font

--- a/themes/tale/assets/scss/tale/_base.scss
+++ b/themes/tale/assets/scss/tale/_base.scss
@@ -9,7 +9,6 @@
 }
 
 html {
-  font-family: $serif-primary;
   color: $default-color;
   font-size: 18px;
 }
@@ -23,30 +22,75 @@ body {
 
 @media (min-width: 1441px) and (max-width: 5000px) {
   html {
-    font-size: 1.5vw;
+    font-size: $high-res-text;
   }
   body {
     width: 70vw;
     max-width: 60ch;
+    .h-card > .mammoth-hcard > .u-photo {
+      width: 2.2rem;
+      height: 2.2rem;
+    }
   }
 }
 
 @media (min-width: 801px) and (max-width: 1440px) {
   html {
-    font-size: 1.9vw;
+    font-size: $mid-res-text;
   }
   body {
     width: 70vw;
     max-width: 60ch;
+    .h-card > .mammoth-hcard > .u-photo {
+      width: 2.2rem;
+      height: 2.2rem;
+    }
   }
 }
 
+// 1-7-21 special adjustments for super small phone screens, body text is now bigger, title header and links smaller, and post meta larger (incl tags)
 @media (min-width: 320px) and (max-width: 800px) {
   html {
-    font-size: 2.4vw;
+      font-size: $low-res-text;
   }
   body {
+
     width: 90vw;
+   
+    .nav-header > .headerlink > .title {
+      font-size: $small-header-text;
+    }
+    .header-menu > .links {
+      font-size: $small-header-link-text;
+    }
+    .post-summary > .h-feed-meta > a > .feed-info {
+      font-size: 90%;
+    }
+    .post-summary > .h-feed-meta > a > .feed-title {
+      font-size: $small-header-text;
+    }
+    .post-summary > .tags > .tagsfont {
+      font-size: 100%;
+    }
+    .post-summary > .tags > .tagslist {
+      font-size: 100%;
+    }
+    .individual-post > .post-meta > a > .post-info {
+      font-size: 90%;
+    }
+    .individual-post > .post-meta > a > .post-title {
+      font-size: $small-header-text;
+    }
+    .individual-post > .tags > .tagsfont {
+      font-size: 100%;
+    }
+    .individual-post > .tags > .tagslist {
+      font-size: 100%;
+    }
+    .h-card > .mammoth-hcard > .u-photo {
+      width: 2.2rem;
+      height: 2.2rem;
+    }
   }
 }
 
@@ -57,7 +101,8 @@ h4,
 h5,
 h6 {
   color: $default-color;
-  font-family: 600 $header;
+  font-family: $header;
+  font-weight: 600;
 }
 
 a {
